# powerbox

ascom-driver/: .gitignore  PolluxAstro.sln
ascom-driver/PolluxAstro/: LocalServer.cs  PolluxAstro Powerbox Setup.iss  PolluxAstro Powerbox Test.js  PolluxAstro.csproj  ReadMe.htm  ReadmePolluxAstroPowerbox.htm  ReferenceCountedObject.cs  SharedResources.cs  frmMain.Designer.cs  frmMain.cs
ascom-driver/PolluxAstro/Properties/: AssemblyInfo.cs
ascom-driver/PolluxAstro/SwitchDriver/: PolluxAstro Powerbox Setup.iss  SetupDialogForm.cs  SetupDialogForm.designer.cs  SwitchDriver.cs  SwitchHardware..cs
doc/: .gitignore  Makefile  manual.tex
firmware/firmware/: Adj.cpp  Adj.h  CommandBuffer.cpp  CommandBuffer.h  Devices.cpp  Devices.h  DewHeater.cpp  DewHeater.h  EnvironmentSensor.cpp  EnvironmentSensor.h  Rail12V.cpp  Rail12V.h  Settings.cpp  Settings.h  TemperatureSensor.cpp  TemperatureSensor.h  VoltageSensor.cpp  VoltageSensor.h  devices.h  firmware.ino  settings.cpp  settings.h
indi-driver/: .gitignore  Makefile.am  configure.ac
indi-driver/debian/: README.Debian  changelog  control  copyright
indi-driver/src/: .gitignore  Makefile.am  powerbox.cpp  powerbox.h
indi-driver/xml/: Makefile.am  indi_pollux_powerbox.xml  indi_powerbox.xml
